fix: reworked memory usage visualization in the status bar